--- a/dicts/emoji.dict.yaml
+++ b/dicts/emoji.dict.yaml
@@ -4,7 +4,7 @@
 
 ---
 name: emoji
-version: "2025-01-11"
+version: "2025-02-04"
 sort: by_weight
 ...
 
@@ -270,6 +270,7 @@ sort: by_weight
 比萨	bi sa
 比萨饼	bi sa bing
 比赛	bi sai
+闭上眼睛	bi shang yan jing
 鄙视	bi shi
 匕首	bi shou
 比特币	bi te bi
@@ -277,6 +278,7 @@ sort: by_weight
 比心	bi xin
 比心手势	bi xin shou shi
 鼻炎	bi yan
+闭眼	bi yan
 毕业	bi ye
 毕业帽	bi ye mao
 比中指	bi zhong zhi
@@ -3477,6 +3479,7 @@ sort: by_weight
 听力障碍	ting li zhang ai
 听诊器	ting zhen qi
 停止	ting zhi
+停止播放	ting zhi bo fang
 瞳孔	tong kong
 痛哭	tong ku
 铜牌	tong pai
@@ -3723,6 +3726,9 @@ sort: by_weight
 无线网络	wu xian wang luo
 五星红旗	wu xing hong qi
 乌鸦	wu ya
+无言	wu yan
+捂眼	wu yan
+捂眼睛	wu yan jing
 无语	wu yu
 乌云蔽日	wu yun bi ri
 乌贼	wu zei
@@ -3731,6 +3737,8 @@ sort: by_weight
 捂着嘴巴	wu zhe zui ba
 捂着嘴笑	wu zhe zui xiao
 捂住耳朵	wu zhu er duo
+捂住眼	wu zhu yan
+捂住眼睛	wu zhu yan jing
 捂住嘴巴	wu zhu zui ba
 乌兹别克斯坦	wu zi bie ke si tan
 乌兹别克斯坦共和国	wu zi bie ke si tan gong he guo
