--- a/dicts/simp.dict.yaml
+++ b/dicts/simp.dict.yaml
@@ -27,7 +27,7 @@
 # 需要注音的字词设定在 others/script/rime/需要注音.txt
 ---
 name: 8105
-version: "2025-02-21"
+version: "2025-03-07"
 sort: by_weight
 ...
 ### 按需启用
@@ -60,6 +60,7 @@ sort: by_weight
 鿬	tian	1
 凃	tu	1
 咲	xiao	1
+跩	zhuai	1
 # 注释掉的这几行已经加入到下面并调整到合适的权重了
 # 〇	ling
 # 囧	jiong
@@ -841,6 +842,7 @@ sort: by_weight
 庱	cheng	4
 噌	cheng	1
 晟	cheng	1
+樘	cheng	1
 铛	cheng	1
 吃	chi	1445563
 持	chi	641315
@@ -1184,6 +1186,7 @@ sort: by_weight
 惮	dan	16732
 石	dan	14278
 眈	dan	12773
+丼	dan	9000
 澹	dan	6736
 掸	dan	4870
 郸	dan	4714
@@ -2733,6 +2736,7 @@ sort: by_weight
 惎	ji	2
 期	ji	1
 鱾	ji	1
+𬶭	ji	1
 㴔	ji	0
 堲	ji	0
 徛	ji	0
@@ -2744,7 +2748,6 @@ sort: by_weight
 𫓹	ji	0
 𬯀	ji	0
 𬶨	ji	0
-𬶭	ji	0
 家	jia	4546765
 加	jia	1329722
 价	jia	384863
@@ -6471,6 +6474,7 @@ sort: by_weight
 维	wei	369458
 危	wei	279881
 委	wei	274305
+胃	wei	253113
 伟	wei	242973
 谓	wei	235703
 唯	wei	217658
@@ -6485,7 +6489,6 @@ sort: by_weight
 畏	wei	70481
 伪	wei	66990
 尉	wei	62071
-胃	wei	53113
 巍	wei	20904
 蔚	wei	20152
 偎	wei	18007
