--- a/.github/workflows/update-dicts.yaml
+++ b/.github/workflows/update-dicts.yaml
@@ -7,6 +7,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: github.repository == 'LufsX/rime'
 
     steps:
       - uses: actions/checkout@v4
