chore: fix - Page_Up

--- a/default.yaml
+++ b/default.yaml
@@ -37,7 +37,7 @@ recognizer:
 
     ## URL 捕获，和逗号句号翻页有冲突
     url: "^(www[.]|https?:|ftp[.:]|mailto:|file:).*$|^[a-z]+[.].+$" # URL 输入
-    url_plus: "^[a-z]+[.:-].*$" # URL 输入加强版（匹配 URL 标准规范 [协议类型]://[服务器地址]:[端口号]/[资源层级UNIX文件路径][文件名]?[查询]#[片段ID]）
+    url_plus: "^[a-z]+[.:].*$" # URL 输入加强版（匹配 URL 标准规范 [协议类型]://[服务器地址]:[端口号]/[资源层级UNIX文件路径][文件名]?[查询]#[片段ID]）
 
     # 响应功能
     punct: "^/([0-9]0?|[A-Za-z]+)$" # 响应 lufs_symbols.yaml 内的输入
